--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+CHANGES IN VERSION 1.1.2
+-------------------------
+
+    o New makeManhattanPlot() function makes it easier visualise
+    association p-values together with read coverage and transcript structure
+    plots.
+
 CHANGES IN VERSION 1.0.0
 ------------------------
 
